Tickets are generated now

--- a/frontend/src/app/components/airport-button/airport-button.component.html
+++ b/frontend/src/app/components/airport-button/airport-button.component.html
@@ -1,6 +1,7 @@
-<button>
-    <div>
-    <h1>fsdfsd</h1>
-    <h2>fsdfsd</h2>
-    </div>
-</button>
+<div>
+    {{carrier}}
+    {{dateTime}}
+    {{originDetails}}
+    {{destinationDetails}}
+    {{price}}
+</div>
