Small bug with differentiation between origin and destination airports fixed

--- a/frontend/src/app/components/destination-form/destination-form.component.html
+++ b/frontend/src/app/components/destination-form/destination-form.component.html
@@ -70,6 +70,7 @@
                     type="radio" 
                     name="ticketOptions"
                     id="{{i}}"
+                    required
                     >
                     <label for="{{i}}">
                         <app-airport-button 
@@ -81,6 +82,7 @@
                         ></app-airport-button>
                     </label> 
                 </ng-container>
+                <input type="submit" value="yes">
             </form>
         </div>
     </div>
