--- a/frontend/src/app/components/destination-form/destination-form.component.html
+++ b/frontend/src/app/components/destination-form/destination-form.component.html
@@ -61,9 +61,9 @@
         type="button" 
         (click)="checkPrices()"
         >
-            CHECK PRICE
+        CHECK PRICE
         </button>
-        <div>
+        <div *ngIf="flights.length > 0; else noFlights">
             <form>
                 <ng-container *ngFor="let flight of flights; let i = index" >
                     <input 
@@ -74,16 +74,19 @@
                     >
                     <label for="{{i}}">
                         <app-airport-button 
-                        carrier="{{flight.carriers}}"
-                        dateTime="{{flight.dateTime}}"
-                        originDetails="{{flight.originDetails.cityName}}"
-                        destinationDetails="{{flight.destinationDetails.cityName}}"
+                        [carrier]=flight.carriers
+                        [dateTime]=flight.dateTime
+                        [originDetails]=flight.originDetails
+                        [destinationDetails]=flight.destinationDetails
                         price="{{flight.moneyDetails.price + flight.moneyDetails.symbol}}"
-                        ></app-airport-button>
+                    ></app-airport-button>
                     </label> 
                 </ng-container>
-                <input type="submit" value="yes">
             </form>
         </div>
+
+        <ng-template #noFlights>
+            <p>No flights avaiable</p>
+        </ng-template>
     </div>
 </form>
