Small bug fixed

--- a/frontend/src/app/components/destination-form/destination-form.component.html
+++ b/frontend/src/app/components/destination-form/destination-form.component.html
@@ -65,7 +65,7 @@
         </button>
         <!--CHECKING IF THERE ARE FLIGHTS FROM CHOOSED AIRPORTS TO CHOOSED AIRPORTS-->
         <div *ngIf="flights.length > 0; else noFlights">
-            <form (submit)="order($event)">
+            <form (submit)="orderTicket($event)">
                 <ng-container *ngFor="let flight of flights; let i = index" >
                     <input 
                     type="radio" 
