Feature with looking for airports at every typed character

--- a/frontend/src/app/components/destination-form/destination-form.component.html
+++ b/frontend/src/app/components/destination-form/destination-form.component.html
@@ -6,6 +6,7 @@
         placeholder="From where" 
         #city1
         (change)="getAirports(city1.value, 'origin')"
+        (keyup)="getAirports(city1.value, 'origin')"
         />
         <!--CHECKING IF ANYTHING IS PASSED-->
         <ng-container *ngIf="originAirports == undefined; else showOriginAirports">
