Feature with looking for airports at every typed character

--- a/frontend/src/app/components/destination-form/destination-form.component.html
+++ b/frontend/src/app/components/destination-form/destination-form.component.html
@@ -36,6 +36,7 @@
         placeholder="Where" 
         #city2
         (change)="getAirports(city2.value, 'destination')"
+        (keyup)="getAirports(city1.value, 'origin')"
         />
         <!--CHECKING IF ANYTHING IS PASSED-->
         <ng-container *ngIf="destinationAirports == undefined; else showDestinationAirports">
