--- a/frontend/src/app/components/destination-form/destination-form.component.html
+++ b/frontend/src/app/components/destination-form/destination-form.component.html
@@ -4,9 +4,9 @@
         type="text" 
         name="fromWhere" 
         placeholder="From where" 
-        #city1
-        (change)="getAirports(city1.value, 'origin')"
-        (keyup)="getAirports(city1.value, 'origin')"
+        #origin
+        (change)="getAirports(origin.value, 'origin')"
+        (keyup)="getAirports(origin.value, 'origin')"
         />
         <!--CHECKING IF ANYTHING IS PASSED-->
         <ng-container *ngIf="originAirports == undefined; else showOriginAirports">
@@ -34,9 +34,9 @@
         type="text" 
         name="where" 
         placeholder="Where" 
-        #city2
-        (change)="getAirports(city2.value, 'destination')"
-        (keyup)="getAirports(city1.value, 'origin')"
+        #destination
+        (change)="getAirports(destination.value, 'destination')"
+        (keyup)="getAirports(destination.value, 'origin')"
         />
         <!--CHECKING IF ANYTHING IS PASSED-->
         <ng-container *ngIf="destinationAirports == undefined; else showDestinationAirports">
