--- a/backend/backend/templates/index.html
+++ b/backend/backend/templates/index.html
@@ -22,9 +22,11 @@
         .ticketQR{
             height: 300px;
             width: 300px;
+            margin-top: 100px;
             margin-left: 200px;
         }
         .footer{
+            margin-top: 100px;
             text-align: center;
             font-size: 20px;
         }
