--- a/frontend/src/app/components/google-maps-redirect/google-maps-redirect.component.html
+++ b/frontend/src/app/components/google-maps-redirect/google-maps-redirect.component.html
@@ -1,1 +1,1 @@
-<button (click)="openGoogleMaps()">CHECK LOCATION IN GOOGLE MAPS</button>
+<button type="button" (click)="openGoogleMaps()">GOOGLE MAPS</button>
