--- a/frontend/src/app/components/google-maps-redirect/google-maps-redirect.component.html
+++ b/frontend/src/app/components/google-maps-redirect/google-maps-redirect.component.html
@@ -1,1 +1,13 @@
-<button type="button" (click)="openGoogleMaps()">GOOGLE MAPS</button>
+<button 
+    class="border-2 bg-white border-black rounded-xl place-items-center transition duration-500 ease-in-out
+    hover:bg-black hover:border-white"
+    type="button" 
+    title="Check airport location on Google Maps"
+    (click)="openGoogleMaps()">
+    <svg xmlns="http://www.w3.org/2000/svg" 
+    class="h-5 w-5 place-self-center"
+    viewBox="0 0 20 20" 
+    fill="#ff3700">
+        <path fill-rule="evenodd" d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd" />
+    </svg>
+</button>
