--- a/frontend/src/app/components/destination-form/destination-form.component.html
+++ b/frontend/src/app/components/destination-form/destination-form.component.html
@@ -100,8 +100,7 @@
                     <p class="justify-self-center">We dont have airports here</p>
                 </ng-container>
                 <ng-template #destinationAirportsChoice>
-                    <select class="form-select mt-1 block w-full
-                    active:bg-red-600"
+                    <select class="form-select mt-1 block w-full"
                     [formControl]="destinationAirportsControl" 
                     (change)="catchChoosedAirports()"
                     multiple>
@@ -138,6 +137,7 @@
                         name="ticketOptions"
                         id="{{i}}"
                         [value]="flight"
+                        (change)="validateTicketData()"
                         [(ngModel)]="selectedTicketControl"
                         >
                         <label class="transition duration-300 ease-in-out rounded-lg
@@ -164,13 +164,15 @@
                 <input class="form-input mt-1 text-center
                 focus:border-b"
                 type="email" 
+                (change)="validateTicketData()"
+                (keyup)="validateTicketData()"
                 [formControl]=ticketEmail 
                 placeholder="E-Mail">
                 <button class="bg-green-500 rounded-md text-white transition duration-500 ease-in-out
                 hover:scale-110
                 disabled:bg-red-700 disabled:text-black"
                 type="submit"
-                disabled>
+                [disabled]="!validTicketData">
                     BUY TICKETS
                 </button>
             </div>
