--- a/frontend/src/app/components/destination-form/destination-form.component.html
+++ b/frontend/src/app/components/destination-form/destination-form.component.html
@@ -1,4 +1,4 @@
-<div class="auto-rows-min mt-5 bg-white rounded-xl transition-all mx-10 my-10 py-10 text-xs
+<div class="auto-rows-min mt-5 bg-white border-2 border-black rounded-xl transition-all mx-10 my-10 py-10 text-xs
     sm:text-base
     lg:mx-20 lg:my-15 lg:py-15 
     xl:mx-40 xl:my-20 xl:py-15
